# my_agent

./: .env.example  README.md  pyproject.toml
src/my_agent/: __init__.py  minimax_client.py
tests/: test_init.py
